# QuranFollow

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
backend/: asr.py  debug.py  main.py  pyproject.toml  server-old.py  server.py
backend/native-messaging/: Makefile  host-manifest.json  install-host-manifest.sh  run.sh
extension/: Makefile  README.md  TODO.md  background-chrome.js  background-firefox.js  manifest-chrome.json  manifest-firefox.json  manifest.json
extension/assets/icons/: README.md
extension/data/metadata/: surah-metadata.json
extension/data/translations/: si-footnotes-inline.json  si-footnotes.json  si-simple.json
extension/lib/: audio-buffer.js  audio-capture.js  audio-processor-worklet.js  constants.js  quran-data.js  quran-navigation.js  quran-renderer.js  quran-renderers.js
extension/lib/audio/: audio.js  capture.js  native-host.js  processor-worklet.js
extension/lib/control/: control.js  keybinds.js
extension/lib/core/: app.js  browser.js  log.js  settings.js
extension/lib/ui/: modal.js  theme.js  ui.js
extension/lib/ui/quran/: data.js  generators.js  navigation.js  quran.js  (+4 more)
extension/popup/: popup.css  popup.html  popup.js
extension/sidepanel/: content.js  sidepanel-original.js  sidepanel-temp.js  sidepanel.css  sidepanel.html  sidepanel.js
src/: asr.py  debug.py  main.py  server.py
src/static/: app.js  index.html  quran-data.js  quran-navigation.js  quran-renderer.js  quran-renderers.js  styles.css  wav-encoder.js
website/: README.md  app.js  index.html  styles.css
website/data/layouts/: uthmani.json
(+10 files in other folders)
