[project]
name = "quran-locater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.2",
    "faster-whisper>=1.1.1",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "whisperx>=3.4.2",
]
